Service Status und Restart

--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -12,3 +12,6 @@ lblSerialPort="Port des Modbus Adapters (z.B. /dev/ttyUSB0):"
 btnSave="Konfiguration speichern"
 btnReStart="Smart Meter Simulator (Neu)start"
 btnStop="Smart Meter Simulator stoppen"
+serviceUnknown="Unbekannt"
+serviceRunning="Running"
+serviceStopped="Stopped"
